Creando los href a las demÃs pÃginas html

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
    </head>
 
    <body style="background-color:#F9E79F">
+      <font face="Comic Sans MS,Arial,Verdana">
       <header>
          <div>
             <img src="images/logo.svg" width="200" height="35" align="left" >
-            <h1><i>TU SERVICIO</i></h1>
+            <h1><strong> TuServicio.com</strong></h1>
          </div>
          <div>
             <h2>"Te reparamos tu computador"</h2>
@@ -20,10 +21,10 @@
          <nav>
             <ul>
                <li><a title="inicio">Inicio</a></li>
-               <li><a title="servicio">Servicios</a></li>
-               <li><a title="contacto">Contáctenos</a></li>
-               <li><a title="sesion">Inicio de Sesión</a></li>
-               <li><a title="registro">Registro</a></li>
+               <li><a title="servicio" href="html/servicios.html">Servicios</a></li>
+               <li><a title="contacto" href="html/contacto.html">Contáctenos</a></li>
+               <li><a title="sesion" href="html/sesion.html">Inicio de Sesión</a></li>
+               <li><a title="registro" href="html/registro.html">Registro</a></li>
             </ul>
          </nav>
          
@@ -41,11 +42,11 @@
       <hr>
       <footer>
          <div>
-            <p><i><b>&copy; 2020 Derechos Reservados</i></p>
-            <p><i><b>Email:</b> mhernan157@hotmail.com</i></p>
-            <p><i><b>Celular:</b> 922755795</i></p>
-            <p><i><b>Dirección:</b> Av. Manchego Muñoz 782 - Huancavelica</p>
-            <p><i><b>País:</b>Perú</p>
+            <h5><i>&copy; 2020 Derechos Reservados</i></h5>
+            <h5><i><b>Email:</b> mhernan157@hotmail.com</i></h5>
+            <h5><i><b>Celular:</b> 922755795</i></h5>
+            <h5><i><b>Dirección:</b> Av. Manchego Muñoz 782 - Huancavelica</h5>
+            <h5><i><b>País:</b>Perú</h5>
          </div>
       </footer>
    </body>
