--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h2>Inicio</h2>
             <div>
                <center><img src="images/tres.jpg" width="400" height="300" alt="tres"></center>
-               <p align="center">Somos una compañia que nos dedicamos a la reparación de computadoras.</p>
+               <p align="center">Somos una compañia que brinda un servicio rápido en reparación de computadoras.</p>
             </div>
          </article>
       </section>
