--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
          <article>
             <h2>Inicio</h2>
             <div>
-               <center><img src="images/tres.jpg" width="400" height="300" alt="tres"></center>
-               <p align="center">Somos una compañia que brinda un servicio rápido en reparación de computadoras.</p>
+               <img src="images/tres.jpg" width="400" height="300" alt="tres">
+               <p>Somos una compañia que brinda un servicio rápido en reparación de computadoras.</p>
             </div>
          </article>
       </section>
