--- a/html/contacto.html
+++ b/html/contacto.html
@@ -33,9 +33,8 @@
       <section style="background-color:#ffffff">
          <article>
             <h2>Contáctenos</h2>
-            <p align="center"> Av. Manchego Muñoz N° 782 - Hvca. - Perú</p>
-            <div align="center">
-               
+            <p> Av. Manchego Muñoz N° 782 - Hvca. - Perú</p>
+            <div>
                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3890.8870189118247!2d-74.97005608560653!3d-12.785844959568422!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x910e0a7f74f1a535%3A0x9446bbfded8c6618!2sAv%20Celestino%20Manchego%20Mu%C3%B1oz%2C%20Huancavelica%2009001!5e0!3m2!1ses-419!2spe!4v1588183622620!5m2!1ses-419!2spe" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
          </article>
