--- a/html/registro.html
+++ b/html/registro.html
@@ -41,17 +41,17 @@
                            <br>
                            <div>
                               <label for="mail">Email: *</label><br>
-                              <input type="email" id="mail" required style="width:250px;height:20px;border-width:thin"/>
+                              <input type="email" id="mail" required style="width:250px;height:20px;border-width:thin" placeholder="Ingrese su Correo"/>
                            </div>
                            <br>
                            <div>
                               <label for="contraseña">Contraseña: *</label><br>
-                              <input type="password" id="contrasena" required style="width:220px;height:20px;border-width:thin"/>
+                              <input type="password" id="contrasena" required style="width:220px;height:20px;border-width:thin" placeholder="Ingrese su Contraseña"/>
                            </div>
                            <br>
                            <div>
                                <label for="contraseña">Confirmación de Contraseña: *</label><br>
-                              <input type="password" id="contrasena" required style="width:220px;height:20px;border-width:thin"/>
+                              <input type="password" id="contrasena" required style="width:220px;height:20px;border-width:thin" placeholder="Confirme su Contraseña"/>
                            </div>
                            <br>
                            <div >
@@ -68,7 +68,7 @@
                            <div>
                            <br>
                               <label for="msg">Comentario: *</label><br>
-                              <textarea id="msg" required style="width:220px;height:30px"></textarea>
+                              <textarea id="msg" required style="width:220px;height:30px" placeholder="Ingrese su Comentario"></textarea>
                            </div>
                            <br>
                            <div >
