--- a/html/servicios.html
+++ b/html/servicios.html
@@ -32,11 +32,27 @@
       <hr>
       <section style="background-color:#ffffff">
          <article>
-            <h2>Inicio</h2>
+            <h2>Servicios</h2>
             <div>
-               <center><img src="../images/tres.jpg" width="400" height="300" alt="tres"></center>
-               <p align="center">Somos una compañia que nos dedicamos a la reparación de computadoras.</p>
-            </div>
+               <table border="1">
+                     <tr>
+                       <th>Servicio</th>
+                       <th>Precio</th>
+                     </tr>
+                     <tr>
+                        <td>Limpieza de virus</td>
+                        <td>100 monedas</td>
+                     </tr>
+                     <tr>
+                        <td>Cambio de Piezas</td>
+                        <td>200 monedas</td>
+                     </tr>
+                     <tr>
+                         <td>Respaldo de Información</td>
+                         <td>80 monedas</td>
+                     </tr>
+                 </table>
+             </div>
          </article>
       </section>
       <hr>
