--- a/html/sesion.html
+++ b/html/sesion.html
@@ -32,10 +32,30 @@
       <hr>
       <section style="background-color:#ffffff">
          <article>
-            <h2>Inicio</h2>
+            <h2>Registro</h2>
             <div>
-               <center><img src="../images/tres.jpg" width="400" height="300" alt="tres"></center>
-               <p align="center">Somos una compañia que nos dedicamos a la reparación de computadoras.</p>
+               <div>
+                 <form>
+                   <fieldset >
+                       <legend><strong> Credenciales </strong></legend>
+                           <br>
+                           <div>
+                              <label for="mail">Email: *</label><br>
+                              <input type="email" id="mail" required style="width:250px;height:20px;border-width:thin" placeholder="Ingrese su Correo"/>
+                           </div>
+                           <br>
+                           <div>
+                              <label for="contraseña">Contraseña: *</label><br>
+                              <input type="password" id="contrasena" required style="width:220px;height:20px;border-width:thin" placeholder="Ingrese su Contraseña"/>
+                           </div>
+                           <br>
+                           <div class="button"></div>
+                              <button type="submit">Continuar</button>
+                           </div>
+                           <br>
+                     </fieldset> 
+                  </form >
+               </div>
             </div>
          </article>
       </section>
